# GPT-2-Transfer-Learning

./: .gitignore  Cargo.toml  HYBRID_GPU_CPU_STRATEGY.md  RUST_CUDA_TEST_RESULTS.md  RUST_HYBRID_GPU_CPU_RESULTS.md  rust_cuda_test_output.txt  rust_hybrid_final_test.txt  rust_hybrid_test_output.txt
.cargo/: config.toml
python_version/: .gitignore  CUDA_TEST_RESULTS.md  Pipfile  README.md  requirements.txt  test_output.txt  transfer_learning.py
src/: main.rs
