[package]
name = "GPT-2-Transfer-Learning"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1"}
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1"}

# For downloading models and tokenizers
hf-hub = "0.3.2"
tokenizers = "0.19.1"

# For loading weights and configs
serde_json = "1.0.120"

# Error handling
anyhow = "1.0.86"
